<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/system_accent1_100"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <TextView
        android:id="@+id/inventoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/inventory_item_list"
        android:textAlignment="center"
        android:textColor="@android:color/system_accent1_800"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/itemNameHdr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:textAlignment="center"
            android:textColor="@android:color/system_accent1_800" />

        <TextView
            android:id="@+id/itemIdHdr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_id"
            android:textAlignment="center"
            android:textColor="@android:color/system_accent1_800" />

        <TextView
            android:id="@+id/itemAmtHdr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_amount"
            android:textAlignment="center"
            android:textColor="@android:color/system_accent1_800" />

        <TextView
            android:id="@+id/itemAddHdr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_item"
            android:textAlignment="center"
            android:textColor="@android:color/system_accent1_800" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <!--My add item row was going to the bottom of the screen because of the scrollview,
        and since scrollview can only host one child, I had to put them into one LinearLayout-->
        <LinearLayout
            android:id="@+id/inventoryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/inventoryGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:outlineSpotShadowColor="@android:color/system_accent1_800"
                android:padding="4dp">

                <EditText
                    android:id="@+id/itemNameAdd"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/inventory_name"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:textColor="@android:color/system_accent1_800"
                    android:textColorHint="@android:color/system_accent1_400"
                    />

                <EditText
                    android:id="@+id/itemIdAdd"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/inventory_id"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:textColor="@android:color/system_accent1_800"
                    android:textColorHint="@android:color/system_accent1_400"/>

                <EditText
                    android:id="@+id/itemAmtAdd"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/inventory_amount"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:textColor="@android:color/system_accent1_800"
                    android:textColorHint="@android:color/system_accent1_400" />

                <Button
                    android:id="@+id/btnAddItem"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/system_accent1_800"
                    android:text="@string/inventory_add"
                    android:textColor="@android:color/system_accent1_400" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>