<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/system_accent1_100"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemNameRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inventory_name"
            android:textAlignment="center"
            android:textColor="@android:color/system_accent1_800"
            android:textColorHint="@android:color/system_accent1_600"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemIdRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inventory_id"
            android:textAlignment="center"
            android:textColor="@android:color/system_accent1_800"
            android:textColorHint="@android:color/system_accent1_600"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemAmtRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inventory_amount"
            android:textAlignment="center"
            android:textColor="@android:color/system_accent1_800"
            android:textColorHint="@android:color/system_accent1_600"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDelItemRow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/system_accent1_800"
            android:text="@string/delete"
            android:textSize="12sp"
            android:textColor="@android:color/system_accent1_400" />
    </LinearLayout>
</LinearLayout>